--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-<mat-toolbar  class="mat-elevation-z0">
-    <div class="title">{{'APP_NAME' | translate}}</div>
 
-    <div class="spacer"></div>
-
-
-</mat-toolbar>
+<mat-toolbar color="primary"></mat-toolbar>
 
 <div class="content">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
