--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,30 +1,36 @@
 :host {
     display: block;
-}
-
-.title {
-    font-size: 20px;
-    text-align: center;
-    font-weight: 500;
-    margin-top: 16px;
-    margin-bottom: 16px;
 
 }
-.mat-grid-tile {
-    max-width: 600px;
+
+.spacer {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
+
 .content {
-    height: calc(100vh-64px);
+    z-index: 2;
+
     overflow: auto;
+  //  background: #dadce0;
 }
 
 mat-toolbar {
-    position: relative;
     z-index: 2;
-    background: #fafafa !important;
+
+    min-height: 96px;
     border-bottom: #dadce0 1px solid;
+    position: fixed;
+
+    background: #fff !important;
+
+    //border-bottom: #dadce0 1px solid;
+
   }
 
-.mat-toolbar:hover {
-    align-self: stretch;
+.footer-toolbar {
+  bottom: 0;
 }
+
+
