--- a/src/app/components/modules/dropdown/dropdown.component.html
+++ b/src/app/components/modules/dropdown/dropdown.component.html
@@ -1,13 +1,15 @@
 <div class="title">{{ field.title }}</div>
-<form class="em">
-  <mat-form-field class="full-width" appearance="outline">
-    <mat-icon matSuffix>{{ field.icon }}</mat-icon>
-    <mat-label>{{ field.title }}</mat-label>
-    <input
-      type="text" placeholder=""  matInput [formControl]="myControl"
-      [matAutocomplete]="auto" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="add($event)">
-  </mat-form-field>
-  <mat-autocomplete #auto="matAutocomplete">
+<mat-form-field appearance="outline">
+
+  <div [formGroup]="forminputs">
+    <input class="full-width" type="text" placeholder="" matInput [formControlName]="field.type" [matAutocomplete]="auto"
+      [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" (matChipInputTokenEnd)="add($event)">
+  </div>
+  
+  <!--<mat-hint>Hint</mat-hint>-->
+</mat-form-field>
+
+<mat-autocomplete #auto="matAutocomplete">
   <mat-option *ngFor="let option of filteredOptions | async" [value]="option[0]">
     <span [ngSwitch]="field.connection">
       <p *ngSwitchCase="'departments'">
@@ -17,20 +19,29 @@
         <b>{{ option[1] }} {{ option[2] }}</b>
         <small> | {{ option[0] }}</small>
       </p>
+
       <p *ngSwitchDefault>
         ERROR
       </p>
     </span>
   </mat-option>
+  <mat-option *ngFor="let option of filteredOptionsStatic | async" [value]="option">
+      <span [ngSwitch]="field.connection">
+        <p *ngSwitchCase="'tags'">
+          {{ option }}
+        <p *ngSwitchCase="'methods_used'">
+          {{ option }}
+        <p *ngSwitchDefault>
+          ERROR
+        </p>
+      </span>
+    </mat-option>
 </mat-autocomplete>
-  <mat-chip-list #chipList>
-    <mat-chip *ngFor="let chip of chips" color="primary" [removable]="removable" selected (removed)="remove(chip)">
-      {{ chip }}
-      <mat-icon *ngIf="removable" matChipRemove>cancel</mat-icon>
-    </mat-chip>
-  </mat-chip-list>
-</form>
 
-
-
+<mat-chip-list #chipList>
+  <mat-chip *ngFor="let chip of chips" color="primary" [removable]="removable" selected (removed)="remove(chip)">
+    {{ chip }}
+    <mat-icon *ngIf="removable" matChipRemove>cancel</mat-icon>
+  </mat-chip>
+</mat-chip-list>
 
