--- a/src/app/components/modules/dropdown/dropdown.component.scss
+++ b/src/app/components/modules/dropdown/dropdown.component.scss
@@ -1,10 +1,10 @@
-.mat-form-field {
+mat-form-field{
   max-height: 80px;
-  min-width: 250px;
-  max-width: 350px;
+  min-width: 300px;
+  max-width: 300px;
   text-align: left;
-  font-size: 12px;
-  
+  font-size: 15px;
+
 
 }
 
@@ -14,11 +14,13 @@
 
 mat-chip-list {
   margin-left: 20px;
-  margin-top: 13px
+  margin-top: 16px
 }
 
+
+
 .title {
-    font: bold;
+    font-weight: bold;
     margin-bottom: 8px;
 }
 
