modular process implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-
-<mat-toolbar color="primary"></mat-toolbar>
+<mat-toolbar color="primary">
+    <app-language-dropdown></app-language-dropdown>
+</mat-toolbar>
 
 <div class="content">
   <router-outlet></router-outlet>
