--- a/src/app/components/modules/_controller/_controller.component.scss
+++ b/src/app/components/modules/_controller/_controller.component.scss
@@ -1,3 +1,5 @@
+@import 'src/rochedesign.scss';
+
 .mat-card {
     border-left: #06c 5px solid;
     padding-top: 4px;
@@ -15,3 +17,15 @@
     box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.20);
 }
 
+.description-card {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    border-left: rgba($roche-red, 0.2)
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40px;
+}
