--- a/src/app/components/localization/language-dropdown/language-dropdown.component.scss
+++ b/src/app/components/localization/language-dropdown/language-dropdown.component.scss
@@ -1,5 +1,6 @@
 :host {
-  max-height: 40px;
+  width: 40px;
+  height: 40px;
   margin-bottom: 8px;
 }
 
@@ -23,3 +24,4 @@
   border-radius: 4px;
   cursor: pointer;
 }
+
