--- a/src/app/components/modules/date/date.component.html
+++ b/src/app/components/modules/date/date.component.html
@@ -1,3 +1,12 @@
-<p>
-  date works!
-</p>
+<div class="title">{{ field.title | translate }}</div>
+<p> {{ field.description | translate }}</p>
+
+<mat-form-field class="example-full-width" appearance="outline">
+  <div [formGroup]="forminputs">
+    <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" [formControlName]="field.type"
+      placeholder="Choose a date">
+</div>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+
+</mat-form-field>
