--- a/src/app/components/modules/freetext/freetext.component.html
+++ b/src/app/components/modules/freetext/freetext.component.html
@@ -1,5 +1,6 @@
 
-<div class="title">{{ field.title }}</div>
+<div class="title">{{ field.title | translate }}</div>
+<p> {{ field.description | translate }}</p>
 <mat-form-field class="size" appearance="outline">
 
   <div [formGroup]="forminputs">
