--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
     <app-language-dropdown></app-language-dropdown>
-</mat-toolbar>
+</mat-toolbar> -->
 
 <div class="content">
   <router-outlet></router-outlet>
 </div>
+
+<app-language-dropdown></app-language-dropdown>
