--- a/src/app/components/modules/help-panel/help-panel.component.scss
+++ b/src/app/components/modules/help-panel/help-panel.component.scss
@@ -1,4 +1,4 @@
-@import 'src/rochedesign.scss';
+@import 'src/app/theme';
 
 mat-expansion-panel {
   border-left: rgba($roche-orange, 1.0) 5px solid;
