--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,14 +4,11 @@
 }
 
 .spacer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
   flex: 1 1 auto;
 }
 
 .content {
   z-index: 2;
-
   overflow: auto;
   //  background: #dadce0;
 }
@@ -32,4 +29,10 @@ mat-toolbar {
   filter: blur(8px);
   -webkit-filter: blur(8px);
 
+}
+
+app-language-dropdown {
+  position: fixed;
+  right: 32px;
+  bottom: 32px;
 }
