--- a/src/app/components/success-alert/success-alert.component.html
+++ b/src/app/components/success-alert/success-alert.component.html
@@ -2,7 +2,7 @@
 
   <div align="center">
   <mat-card-title id="title">
-    Deine Idee wurde erfolgreich übermittelt
+    {{ 'RESULT.SUCCESS.TITLE' | translate}}
   </mat-card-title>
   <svg id="successAnimation" class="animated" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 70 70">
     <path id="successAnimationResult" fill="#D8D8D8" d="M35,60 C21.1928813,60 10,48.8071187 10,35 C10,21.1928813 21.1928813,10 35,10 C48.8071187,10 60,21.1928813 60,35 C60,48.8071187 48.8071187,60 35,60 Z M23.6332378,33.2260427 L22.3667622,34.7739573 L34.1433655,44.40936 L47.776114,27.6305926 L46.223886,26.3694074 L33.8566345,41.59064 L23.6332378,33.2260427 Z"/>
@@ -11,9 +11,9 @@
   </svg>
   <br>
   <br>
-  <button id="button1" mat-flat-button color="primary">Idee einreichen</button>
-  <button id="button2" mat-flat-button color="primary">Idee in HYPE ansehen</button>
+  <button id="button1" mat-flat-button color="primary">{{ 'RESULT.SUCCESS.BUTTON.LEFT' | translate}}</button>
+  <button id="button2" mat-flat-button color="primary">{{ 'RESULT.SUCCESS.BUTTON.CENTER' | translate}}</button>
 
-  <button id="button3" mat-stroked-button color="primary">HYPE Startseite</button>
+  <button id="button3" mat-stroked-button color="primary">{{ 'RESULT.SUCCESS.BUTTON.RIGHT' | translate}}</button>
 </div>
 
