--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './rochedesign.scss';
+@import 'src/app/theme';
 
 ::-webkit-scrollbar {
   display: none;
