--- a/src/app/components/stepper-container/stepper-container.component.html
+++ b/src/app/components/stepper-container/stepper-container.component.html
@@ -2,7 +2,7 @@
   <mat-horizontal-stepper class="fixed-header" labelPosition="bottom" #stepper>
     <mat-step *ngFor="let step of (config$ | async).config">
       <ng-template matStepLabel>{{step.name | translate}}</ng-template>
-      <app-controller [imgpath]=config.imgpath [chapter]="step" [forminputs]="formGroup"></app-controller>
+      <app-controller [imgpath]="(config$ | async).imgpath" [chapter]="step" [forminputs]="formGroup"></app-controller>
     </mat-step>
   </mat-horizontal-stepper>
   <app-footer [stepper]=stepper (success)="fireSuccess()"></app-footer>
