--- a/src/app/components/fields/freetext/freetext.component.html
+++ b/src/app/components/fields/freetext/freetext.component.html
@@ -1,12 +1,8 @@
-
 <div class="title">{{ field.title | translate }}</div>
+
 <p> {{ field.description | translate }}</p>
-<mat-form-field class="size" appearance="outline">
 
-  <div [formGroup]="forminputs">
+<mat-form-field class="size" appearance="outline" [formGroup]="forminputs">
       <textarea matInput cdkTextareaAutosize
-placeholder="Leave a comment" [formControlName]="field.type"></textarea>
-  </div>
-
-  <!--<mat-hint>Hint</mat-hint>-->
+                placeholder="Leave a comment" [formControlName]="field.type"></textarea>
 </mat-form-field>
