--- a/src/app/components/fields/selector/selector.component.html
+++ b/src/app/components/fields/selector/selector.component.html
@@ -1,13 +1,16 @@
 <div class="title"><b>{{ field.title | translate }}</b></div>
 <p> {{ field.description | translate }}</p>
+
 <mat-chip-list #chipList [(ngModel)]="selectedChips" multiple>
+  <div *ngFor="let chip of (chips$ | async)">
 
+    <mat-chip color="primary" [selected]="isSelected(chip)" (focus)="selectChip(chip)"
+       [matTooltip]="chip.description | translate">
+      <mat-icon *ngIf="isSelected(chip)">check</mat-icon>
+      <span>{{ chip.name | translate }}</span>
 
-  <mat-chip *ngFor="let chip of chips" [selected]="isSelected(chip)" (focus)="selectChip(chip)"
-            color="primary" [matTooltip]="chip.description | translate">
-    <mat-icon *ngIf="isSelected(chip)">check</mat-icon>
-    <span>{{ chip.name | translate }}</span>
-
-  </mat-chip>
+    </mat-chip>
+  </div>
 </mat-chip-list>
-{{ selectedChips | json}}
+
+
