--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,10 @@ mat-list-item:hover {
   width: 600px;
 }
 
+.panel-welcome .mat-dialog-container{
+  overflow: hidden;
+  border-radius: 16px;
+  padding: 20px;
+  width: 1000px
+}
+
