--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<!-- <mat-toolbar color="primary">
-    <app-language-dropdown></app-language-dropdown>
-</mat-toolbar> -->
-
+<app-header></app-header>
 <div class="content">
-  <router-outlet></router-outlet>
+  <router-outlet>
+
+  </router-outlet>
 </div>
 
-<app-language-dropdown></app-language-dropdown>
