--- a/src/app/components/general/component-not-found/component-not-found.component.html
+++ b/src/app/components/general/component-not-found/component-not-found.component.html
@@ -1,8 +1,11 @@
 <div>
 
-  COMPONENT ERROR: Please contact an administrator to fix this issue 
+  COMPONENT ERROR: <b>{{ componentName }}</b> is not defined
+ 
   <br>
-  
+  Please contact an administrator to fix this issue
+  <br>
+
   <b>Kevin Latusinski:</b> kevin.latusinski@roche.com
   <b>Sebastian Kafitz:</b> sebastian.kafitz@roche.com
 
