update friday code review

--- a/src/app/components/dialogs/dialog-success/success-alert.component.html
+++ b/src/app/components/dialogs/dialog-success/success-alert.component.html
@@ -18,3 +18,5 @@
   <button mat-stroked-button color="primary">{{ 'RESULT.SUCCESS.BUTTON.RIGHT' | translate}}</button>
 
 </div>
+
+{{ result$ | async | json}}
