--- a/src/app/components/fields/field-attachments/field-attachments.component.html
+++ b/src/app/components/fields/field-attachments/field-attachments.component.html
@@ -46,6 +46,9 @@
         <button mat-button mat-stroked-button color="primary" (click)="item.remove()">
           {{ 'BUTTON_DELETE' | translate }}
         </button>
+        <button mat-button mat-stroked-button color="primary" (click)="addFiles()">
+          LOGGER
+        </button>
       </td>
     </tr>
   </tbody>
