--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="spacer"></div>
   <button mat-flat-button color="primary" (click)="goBack()"
     class="button-global-1">{{ 'BUTTON_BACK' | translate }}</button>
-  <button class="fab" mat-flat-button color="primary" (click)="fireSuccess()">
+  <button class="fab" mat-flat-button color="primary" type="submit" (click)="fireSuccess()">
     <mat-icon class="mat-icon-fab">save_outline</mat-icon>
     {{ 'RESULT.BUTTON.TRANSFER' | translate }}
   </button>
