--- a/src/app/components/fields/field-image/field-image.component.html
+++ b/src/app/components/fields/field-image/field-image.component.html
@@ -1,5 +1,5 @@
-<div class="bottom-spacer">
-  <span>
+<div class="bottom-spacer" >
+  <span >
     <div>
       <app-field-title [field]="field"></app-field-title>
       <span>
@@ -12,8 +12,8 @@
 
     <div class="spacer"></div>
 
-    <div>
-      <img [src]="croppedImage" />
+    <div >
+      <img [src]="image" />
     </div>
   </span>
 
